--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: color:#25a0ad no-repeat center center fixed;
+    background: no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -80,7 +80,7 @@ hr {
 .box {
     margin-bottom: 20px;
     padding: 30px 15px;
-    background: #fff;
+    background: #e1e1e1;
     background: rgba(255,255,255,0.9);
 }
 
@@ -103,7 +103,7 @@ hr {
 }
 
 footer {
-    background: #fff;
+    background: #e1e1e1;
     background: rgba(255,255,255,0.9);
 }
 
@@ -145,7 +145,7 @@ footer p {
         font-size: 1.25em;
         font-weight: 400;
         letter-spacing: 3px;
-        color: #fff;
+        color: #e1e1e1;
     }
 
     .navbar {
@@ -162,7 +162,7 @@ footer p {
 
     .navbar-default {
         border: none;
-        background: #fff;
+        background: #e1e1e1;
         background: rgba(255,255,255,0.9);
     }
 
