--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: no-repeat center center fixed;
+    background-color: #25a0ad;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -145,7 +145,7 @@ footer p {
         font-size: 1.25em;
         font-weight: 400;
         letter-spacing: 3px;
-        color: #e1e1e1;
+        color: #25a0ad;
     }
 
     .navbar {
